<resources>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_ad">Ad</string>
    <string name="accessibility_ad_image">Ad image</string>
    <string name="accessibility_ad_sign">Ad sign</string>
    <string name="accessibility_ad_small_image">Ad small image</string>
    <string name="alarm">Alarm</string>
    <string name="alarmAutomaticallySnoozed">Alarm automatically snoozed</string>
    <string name="alarmButton">Alarm</string>
    <string name="alarmControlPanelAccessibility">Alarm Control Panel</string>
    <string name="alarmCurrentlyDisabled">Alarm disabled</string>
    <string name="alarmGoOffIn">This alarm will go off in</string>
    <string name="alarmHasNotSaved">"The alarm hasn't been saved yet."</string>
    <string name="alarmRinging">Alarm ringing</string>
    <string name="alarmRingingNotificationsChannel">Alarm Ringing</string>
    <string name="alarmSaved">Alarm Saved</string>
    <string name="alarmSnoozed">Alarm snoozed</string>
    <string name="alarmStopped">Alarm stopped</string>
    <string name="alarmSuggestionsNotificationsChannel">Alarm Suggestions</string>
    <string name="alarmSwitchAccessibility">Switch to enable and disable alarms</string>
    <string name="alarmTone">Alarm Tone</string>
    <string name="alarmType">Alarm Type</string>
    <string name="alarmWouldRingIn">This alarm would ring in</string>
    <string name="alarm_suggestion_text">Do you need your usual one tomorrow at %1$d:%2$02d AM?</string>
    <string name="alarm_suggestion_title">Missing an alarm?</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_in_a_few_minutes">These alarms will go off in a few minutes</string>
    <string name="allow">Allow</string>
    <string name="almostThere">Almost there</string>
    <string name="and">and</string>
    <string name="answer1">"You can change the alarm sound in the Settings screen, choosing between the default app ringtone, or any of the ringtones available on your phone or songs you have downloaded or transferred to your phone. "</string>
    <string name="answer10">Our \"Pro\" version removes all ads for a very low price. You can purchase it from the Settings screen, using the \"Remove Ads\" option.</string>
    <string name="answer11">To ensure that the alarm is as loud as it can be, we \"Override the phone volume\". You can disable that feature in the Settings screen and the alarm will respect your phones alarm volume.</string>
    <string name="answer12">"That could happen if: 
* The \"Alarm type\" is set to Vibration only.
* The volume is set too low in the settings screen.
* The phone alarm volume is set very low and the \"Override phone volume\" setting is disabled in our app's settings.

If the problem persists, please \"Report a problem\" from the Settings screen and we will fix the issue."</string>
    <string name="answer2">We only provide a default super loud ringtone with the app, but you can also choose any of the ringtones available on your device, and also any song that you download or transfer to your phone. You have infinite possibilities!</string>
    <string name="answer3">We use 3 stop buttons to prevent accidental deactivations, ensuring that you never miss an alarm.</string>
    <string name="answer4">Yes, you can disable the snooze button in the Settings screen.</string>
    <string name="answer5">"Before smartphones, you could turn off your old phone and your alarms would still ring. That's because phones weren't really completely off back then. 
If you turn off your smartphone nowadays, alarms won't ring at all, and there is no way to make that work anymore. Please keep your phone on and charged during the night to ensure alarms will ring in the morning."</string>
    <string name="answer6">To avoid ringing for hours if you are away from the phone, we automatically snooze alarms after a minute ringing. You can change how long it takes to automatically snooze the alarms or disable it completely in the Settings screen.</string>
    <string name="answer7">Yes! You can disable the \"Fade In\" option in the Settings screen to make the alarm ring at full volume.</string>
    <string name="answer8">You can switch the time format between AM/PM and 24 hours format (00:00 to 23:59) at the Settings screen.</string>
    <string name="answer9">Ads are our main source of income and enable us to dedicate all our time and efforts to improve the app, offer new features and fix any issues. We also offer a pro version for users that want to support us even further and eliminate all the ads.</string>
    <string name="app_name">Simple Alarm</string>
    <string name="app_name_english_only">Simple Alarm</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areYouSureDelete">Are you sure you want to delete this alarm?</string>
    <string name="areYouSureDeletes">Are you sure you want to delete these alarms?</string>
    <string name="autoSnooze">Automatically snooze</string>
    <string name="autoSnoozeDuration">Time before auto-snooze</string>
    <string name="autoSnoozeExplanation">Automatically snoozes alarms after some time ringing without response</string>
    <string name="back">back</string>
    <string name="backspace">Backspace</string>
    <string name="batteryLowWarning">Battery low! Please connect your device before sleeping.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buyPro">Buy Pro</string>
    <string name="cancel">Cancel</string>
    <string name="cantSelectSound">"That's embarrassing! You can't select an alarm sound without a picker in your device!"</string>
    <string name="channelMuted">Our Alarm Ringing Notification is disabled on your device. Please enable it to see the alarm notification while it is ringing.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clickToView">Tap to see your alarms</string>
    <string name="close">Close</string>
    <string name="color_theme">Color theme</string>
    <string name="com.crashlytics.android.build_id">56d0750b877144b993feec58b04bacb0</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy">Copy</string>
    <string name="currentSound">Current sound</string>
    <string name="data_protection_summary">Change your data protection and advertising preferences</string>
    <string name="data_protection_title">Data Protection</string>
    <string name="fadeIn">Fade In</string>
    <string name="fadeInExplanation">Gradually increases volume to wake up gently</string>
    <string name="faq">FAQ</string>
    <string name="faqSummary">Frequently Asked Questions</string>
    <string name="generalPreferencesTitle">General</string>
    <string name="helpCenter">Help center</string>
    <string name="keyVibrateExplanation">Vibrates when touching buttons on screen</string>
    <string name="keyVibrateText">Keyboard Vibration</string>
    <string name="moreAppsExplanation">Download other recommended apps and games</string>
    <string name="newAlarm">New Alarm</string>
    <string name="number0">0</string>
    <string name="number00">00</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="onboarding_lets_begin">"Let's begin"</string>
    <string name="onboarding_text1">Choose alarm tones and volumes, snooze times and much more in our Settings screen.</string>
    <string name="onboarding_title1">Customize</string>
    <string name="otherApps">More Apps and Games</string>
    <string name="overridePhoneVolume">Override phone volume</string>
    <string name="overridePhoneVolumeExplanation">Increases phone volume to 100% while ringing</string>
    <string name="pauseDuration">Snooze Duration</string>
    <string name="personalize">Personalize</string>
    <string name="rateApp">Do you like the app?</string>
    <string name="rateAppExplanation">We would like to hear your thoughts!</string>
    <string name="recommendToAFriend">Recommend to a friend</string>
    <string name="recommendToAFriendExplanation">Send a message to a friend recommending Simple Alarm</string>
    <string name="removeAds">Remove Ads</string>
    <string name="removeAdsExplanation">Removes all ads from the app forever</string>
    <string name="reportProblem">Report a problem</string>
    <string name="reportProblemExplanation">Something went wrong? Let us know!</string>
    <string name="showNotificationsExplanation">Shows a notification about your next alarm</string>
    <string name="showNotificationsText">Show notifications</string>
    <string name="showPauseButton">Show snooze button:</string>
    <string name="showSnoozeExplanation">Shows snooze button while alarm is ringing</string>
    <string name="soundAndVibrationPreferencesTitle">Sound and vibration</string>
    <string name="stopAndSnoozePreferencesTitle">Stop and snooze</string>
    <string name="threeButtonsValue">three_buttons</string>
    <string name="threeStepsText">3 Steps Stop</string>
    <string name="threeStopsExplanation">"Shows three stop buttons instead of one so you don't accidentally stop the alarm"</string>
    <string name="timeFormat">Time Format</string>
    <string name="volume">Volume</string>
    <string name="waysToStopTitle">Stop method</string>
</resources>