<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center" android:orientation="horizontal" android:id="@id/topSection" android:background="@color/colorPrimaryNew" android:layout_width="fill_parent" android:layout_height="@dimen/newAlarmTimeDialogTitleHeight" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="@dimen/newAlarmTimeDialogTitleSize" android:textStyle="normal" android:textColor="@color/textInsidePrimaryColor" android:id="@id/displayAlarmDialog" android:paddingLeft="@dimen/massiveGap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" android:includeFontPadding="false" android:fontFamily="sans-serif-light" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/text_view_am" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/textSizeBig" android:textStyle="normal" android:textColor="@color/textInsidePrimaryColor" android:id="@id/text_view_am" android:paddingLeft="@dimen/massiveGap" android:paddingTop="@dimen/massiveGap" android:paddingRight="@dimen/hyperMassiveGap" android:paddingBottom="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AM" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" app:layout_constraintBottom_toTopOf="@id/text_view_pm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/displayAlarmDialog" />
        <TextView android:textSize="@dimen/textSizeBig" android:textStyle="normal" android:textColor="@color/textColorAmPmNotSelected" android:id="@id/text_view_pm" android:paddingLeft="@dimen/massiveGap" android:paddingTop="@dimen/smallGap" android:paddingRight="@dimen/hyperMassiveGap" android:paddingBottom="@dimen/massiveGap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/PM" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" app:layout_constraintBaseline_toBaselineOf="@id/displayAlarmDialog" app:layout_constraintStart_toStartOf="@id/text_view_am" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:background="@color/windowBackgroundDialog" android:paddingTop="@dimen/hyperMassiveGap" android:paddingBottom="@dimen/hugeGap" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/topSection">
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_1" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:text="@string/number1" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toStartOf="@id/text_view_hour_2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_2" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:text="@string/number2" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toStartOf="@id/text_view_hour_3" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/text_view_hour_1" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_3" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:text="@string/number3" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/text_view_hour_2" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_4" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number4" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_1" app:layout_constraintStart_toStartOf="@id/text_view_hour_1" app:layout_constraintTop_toBottomOf="@id/text_view_hour_1" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_5" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number5" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_2" app:layout_constraintStart_toStartOf="@id/text_view_hour_2" app:layout_constraintTop_toBottomOf="@id/text_view_hour_2" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_6" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number6" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_3" app:layout_constraintStart_toStartOf="@id/text_view_hour_3" app:layout_constraintTop_toBottomOf="@id/text_view_hour_3" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_7" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number7" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_4" app:layout_constraintStart_toStartOf="@id/text_view_hour_4" app:layout_constraintTop_toBottomOf="@id/text_view_hour_4" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_8" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number8" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_5" app:layout_constraintStart_toStartOf="@id/text_view_hour_5" app:layout_constraintTop_toBottomOf="@id/text_view_hour_5" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_9" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number9" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_6" app:layout_constraintStart_toStartOf="@id/text_view_hour_6" app:layout_constraintTop_toBottomOf="@id/text_view_hour_6" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_00" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number00" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_7" app:layout_constraintStart_toStartOf="@id/text_view_hour_7" app:layout_constraintTop_toBottomOf="@id/text_view_hour_7" />
        <TextView android:textSize="@dimen/textSizeNumbersNewLayout" android:textStyle="normal" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/text_view_hour_0" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" android:text="@string/number0" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="@id/text_view_hour_8" app:layout_constraintStart_toStartOf="@id/text_view_hour_8" app:layout_constraintTop_toBottomOf="@id/text_view_hour_8" />
        <FrameLayout android:gravity="center" android:id="@id/layout_back" android:background="@drawable/time_buttons_ripple" android:layout_width="@dimen/sizeTextViewNumbersNewLayout" android:layout_height="@dimen/sizeTextViewNumbersNewLayout" android:layout_marginTop="@dimen/marginTopNumberDialog" app:layout_constraintEnd_toEndOf="@id/text_view_hour_9" app:layout_constraintStart_toStartOf="@id/text_view_hour_9" app:layout_constraintTop_toBottomOf="@id/text_view_hour_9">
            <ImageView android:layout_gravity="center" android:layout_width="@dimen/backIconSize" android:layout_height="@dimen/backIconSize" android:src="@drawable/ic_backspace" android:contentDescription="@string/backspace" app:layout_constraintEnd_toEndOf="@id/text_view_hour_9" app:layout_constraintStart_toStartOf="@id/text_view_hour_9" app:layout_constraintTop_toBottomOf="@id/text_view_hour_9" />
        </FrameLayout>
        <TextView android:textSize="@dimen/textSizeMedium" android:textStyle="normal" android:textColor="@color/textColorDialogHour" android:id="@id/text_view_cancel" android:padding="@dimen/hyperMassiveGap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/hyperMassiveGap" android:text="@string/cancel" android:textAllCaps="true" android:fontFamily="sans-serif-medium" app:layout_constraintBottom_toBottomOf="@id/text_view_ok" app:layout_constraintEnd_toStartOf="@id/text_view_ok" app:layout_constraintTop_toTopOf="@id/text_view_ok" />
        <TextView android:textSize="@dimen/textSizeMedium" android:textStyle="normal" android:textColor="@color/textColorDialogHour" android:id="@id/text_view_ok" android:padding="@dimen/hyperMassiveGap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bigGap" android:layout_marginBottom="@dimen/hugeGap" android:text="@android:string/ok" android:textAllCaps="true" android:fontFamily="sans-serif-medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/layout_back" app:layout_constraintStart_toStartOf="@id/layout_back" app:layout_constraintTop_toBottomOf="@id/layout_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>