<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:background="@color/backgroundColorOnboarding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="26.0sp" android:textColor="@color/textInsidePrimaryColor" android:id="@id/text_onboarding_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/onboarding_title1" app:layout_constraintBottom_toTopOf="@id/frame_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <FrameLayout android:id="@id/frame_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/text_onboarding_title" app:layout_constraintStart_toStartOf="@id/text_onboarding_title">
        <TextView android:textSize="16.0sp" android:textColor="@color/textInsidePrimaryColor" android:gravity="center" android:id="@id/text_onboarding_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="80.0dip" android:layout_marginRight="80.0dip" android:layout_marginBottom="200.0dip" android:text="@string/onboarding_text1" android:lines="3" />
    </FrameLayout>
    <ImageView android:id="@id/image_onboarding_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:src="@drawable/onboarding_1" android:contentDescription="@string/onboarding_lets_begin" app:layout_constraintBottom_toTopOf="@id/text_onboarding_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>